kubernetes.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: minecraft
  name: minecraft
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minecraft
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minecraft
    spec:
      containers:
      - env:
        - name: EULA
          value: 'true'
        image: divy4/minecraft-server
        imagePullPolicy: IfNotPresent
        name: minecraft
        ports:
        - containerPort: 25565
        volumeMounts:
        - mountPath: /minecraft/ops.json
          name: config
          subPath: ops.json
        - mountPath: /minecraft/server.properties
          name: config
          subPath: server.properties
        - mountPath: /minecraft/whitelist.json
          name: config
          subPath: whitelist.json
      volumes:
      - configMap:
          name: minecraft
        name: config
---
apiVersion: v1
kind: Service
metadata:
  name: minecraft
  namespace: default
spec:
  ports:
  - name: minecraft
    nodePort: 30000
    port: 25565
    protocol: TCP
    targetPort: 25565
  selector:
    app: minecraft
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: minecraft
  namespace: default
spec:
  egress:
  - {} # TODO: develop outgoing traffic profile
  ingress: # Allow ingress on 25565 TCP/UDP
  - ports:
    - port: 25565
      protocol: TCP
    - port: 25565
      protocol: UDP
  podSelector:
    matchLabels:
      app: minecraft
  policyTypes:
  - Egress
  - Ingress
